--- a/src/content/spinoff/applemint/공지.mdx
+++ b/src/content/spinoff/applemint/공지.mdx
@@ -4,7 +4,7 @@ author: "AppleMint, Melted_Mint"
 published: 9999-99-99T99:99:99.999Z
 description: " 2024.11.26 18:58 최종수정 "
 image: ""
-tags: [ fantasy, school, magician ]
+tags: [ fantasy, magician ]
 category: "미정"
 draft: false
 ---
